busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busyboxsleep
spec:
  selector:
    matchLabels:
      running: afterLabels
  replicas: 2
  template:
    metadata:
      labels:
        running: afterLabels
    spec: 
      containers:
      - name: busybox
        image: busybox
        command: ["sleep"]
        args: ["60"]
      restartPolicy: Always
