ingresstlscert.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: no-rules-map
spec:
  tls:
  - secretName: supersecret
  backend:
    serviceName: s1
    servicePort: 80
