sampleingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target:/
spec:
  rules:
  - http:
     paths:
     - path: /path
       backened:
        serviceName: test
        servicePort: 80
